[workspace]
members = ["adobe", "common", "frei0r", "openfx"]
resolver = "2"

[workspace.package]
version = "2.1.2"

[patch.crates-io]
ofx = { git = "https://github.com/AdrianEddy/ofx-rs.git", rev = "0b15219" }
ofx_sys = { git = "https://github.com/AdrianEddy/ofx-rs.git", rev = "0b15219" }

[profile.deploy]
inherits = "release"
codegen-units = 1
lto = true
strip = true
