[package]
name = "gyroflow_adobe"
version.workspace = true
authors = ["Adrian <adrian.eddy@gmail.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
gyroflow-plugin-base = { path = "../common" }
# CJK encoding fix (change adobe-cjk-encoding): build against the NiYien fork of
# virtualritz/after-effects (branch niyien-cjk-encoding, rev e55cb119) — routes button /
# popup labels through the system-code-page conversion set_name already does. Uncomment the
# path deps below for local fork development.
after-effects = { version = "0.3", git = "https://github.com/NiYien/after-effects.git", rev = "e55cb119bcf02fb489a58614e9484e26b3cd285c" }
premiere      = { version = "0.2", git = "https://github.com/NiYien/after-effects.git", rev = "e55cb119bcf02fb489a58614e9484e26b3cd285c" }
#after-effects = { path = "../../after-effects/after-effects" }
#premiere = { path = "../../after-effects/premiere" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
pretty-hex = "0.4"
png = "0.18"
serde_json = "1"

win_dbg_logger = "0.1"
log-panics = { version = "2.1", features = ["with-backtrace"]}
ctor = "0.2"

[build-dependencies]
#pipl = { path = "../../after-effects/pipl" }
pipl = "0.1"
