[package]
name = "gyroflow-plugin-base"
version = "0.1.0"
edition = "2024"
authors = ["Adrian <adrian.eddy@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Gyroflow plugin base"

[dependencies]
log = "0.4"
itertools = "0.14"
lru = "0.17"
# openfx-output-adjust-flip: temporarily switched to path dep so the plugins build against
# the unpushed local core changes (FLIP_H/FLIP_V flag bits + BufferDescription.flip_*).
# Revert to git rev with the merged core commit before publishing.
#gyroflow-core = { git = "https://github.com/NiYien/gyroflow.git", rev = "4cb3a8108f1588cb4d5109ab2da5f068d38eb2c3", default-features = false, features = ["bundle-lens-profiles", "use-opencl", "cache-gyro-metadata"] }
gyroflow-core = { path = "../../gyroflow/src/core", default-features = false, features = ["bundle-lens-profiles", "use-opencl", "cache-gyro-metadata"] }
log-panics = "2.1"
serde = "1"
serde_json = "1"
sys-locale = "0.3"
rfd = { version = "0.17", default-features = false, features = ["xdg-portal"] }
parking_lot = "0.12"
lazy_static = "1.5.0"
fastrand = "2.4"
simplelog = "0.12.2"
win_dbg_logger = "0.1"
mimalloc = { version = "0.1.50", default-features = false }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
oslog = "0.2"

[build-dependencies]
serde_json = "1"
