[package]
name = "gyroflow-ofx"
version.workspace = true
authors = ["Adrian <adrian.eddy@gmail.com>", "Ilya Epifanov <elijah.epifanov@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2024"
description = "Gyroflow OpenFX plugin"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
gyroflow-plugin-base = { path = "../common" }
ofx = "0.3"
log = "0.4"
regex = "1.12"

[build-dependencies]
winres = "0.1"
